SecurityPOC/force-app/main/default/objects/Guard_Coverage__c/Guard_Coverage__c.object-meta.xml
<CustomObject>
    <label>Guard Coverage</label>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Guard Coverage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Guard Coverages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>