SecurityPOC/force-app/main/default/objects/Guard_Coverage__c/fields/Events__c.field-meta.xml
<CustomField>
    <fullName>Events__c</fullName>
    <label>Events</label>
    <referenceTo>Events__c</referenceTo>
    <relationshipName>Event_Coverages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>