SecurityPOC/force-app/main/default/objects/Guard_Coverage__c/fields/Guard__c.field-meta.xml
<CustomField>
    <fullName>Guard__c</fullName>
    <label>Guard</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Guard Record Type</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Event_Coverages</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>