SecurityPOC/force-app/main/default/objects/Guard_Coverage__c/fields/Guard_Rating__c.field-meta.xml
<CustomField>
    <fullName>Guard_Rating__c</fullName>
    <formula>TEXT(Guard_Review__r.Rating__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Guard Rating</label>
    <type>Text</type>
</CustomField>