SecurityPOC/force-app/main/default/objects/Guard_Coverage__c/fields/Guard_Review__c.field-meta.xml
<CustomField>
    <fullName>Guard_Review__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Guard Review</label>
    <referenceTo>Guard_Review__c</referenceTo>
    <relationshipLabel>Guard Coverages</relationshipLabel>
    <relationshipName>Guard_Coverages</relationshipName>
    <type>Lookup</type>
</CustomField>