SecurityPOC/force-app/main/default/objects/Guard_Coverage__c/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zone</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Location__c</field>
            <operation>equals</operation>
            <valueField>Zone__c.Location__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Zone__c</referenceTo>
    <relationshipName>Event_Coverages</relationshipName>
    <type>Lookup</type>
</CustomField>